--- a/src/app/home/operation/invoice-list2/invoice-list2.component.html
+++ b/src/app/home/operation/invoice-list2/invoice-list2.component.html
@@ -27,7 +27,11 @@
             <div class="form-group">
               <label *ngIf="POL" class="label-header">Shipper/CHA</label>
               <label *ngIf="!POL" class="label-header">Consignee/CHA</label>
-              <label class="label-subheader">{{f.SHIPPER_NAME.value}}</label>
+
+              <label  class="label-subheader">{{f.SHIPPER_NAME.value}}</label>
+
+              <!-- <label *ngIf="!POL" class="label-subheader">{{f.SHIPPER_NAME.value}}</label> -->
+
 
             </div>
           </div>
@@ -41,23 +45,62 @@
         <div class="row mt-4">
           <div class="col-md-3">
             <div class="form-group">
-              <ng-select formControlName="BILL_TO">
-                <ng-option disabled value="">--Select--</ng-option>
-                <ng-option *ngFor="let item of BillFromList" value="{{item.CODE}}">{{item.CODE}}</ng-option>
-              </ng-select>
-              <label class="form-label-ddl">Bill To<span class="text-danger"> *</span></label>
+              <nav id="navbar" class="navbar pointer">
+                <ul>
+                  <li class="dropdown"><a class="form-btn-primary  p-2">Please Select Address<i
+                              class="bi bi-chevron-down"></i></a>
+                              <ul>
+                              <table class="table table-bordered">
+                                <thead>
+                                  <tr>
+                                    <th>Select</th>
+                                    <th>No</th>
+                                   <th>Customer Name</th>
+                                    <th>Branch Name</th>
+                                    <th>Address</th>
+                                    <th>Country</th>
+                                    <th>Is SEZ</th>
+                                    <th>Is Tax Applicable</th>
+                                    <th>Tax No</th>
+                                    <th>Tax Type</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr  (click)="getAddress(item.ADDRESS,item.BRANCH_ID)"  *ngFor="let item of AddressList let i = index">
+                                    <td><input type="checkbox"></td>
+                                    <td>{{i + 1}}</td>
+                                    <td>{{item.CUST_NAME}}</td>
+                                    <td>{{item.BRANCH_NAME}}</td>
+                                    <td>{{item.ADDRESS}}</td>
+                                    <td>{{item.COUNTRY}}</td>
+                                    <td>{{item.IS_SEZ}}</td>
+                                    <td>{{item.IS_TAX_APPLICABLE}}</td>
+                                    <td>{{item.TAX_NO}}</td>
+                                    <td>{{item.TAX_TYPE}}</td>
+                                  </tr>
+                                  </tbody>
+                                </table>
+                              </ul>
+                  </li>
+              </ul>
+              </nav>
               <!-- <label class="label-header">Bill To</label>
               <label class="label-subheader">{{f.SHIPPER_NAME.value}}</label> -->
             </div>
           </div>
           <div class="col-md-3">
             <div class="form-group">
-              <input type="date" class="form-control" formControlName="INVOICE_DATE">
-              <label class="form-label">Invoice Date</label>
+              <ng-select formControlName="BILL_TO">
+                <ng-option disabled value="">--Select--</ng-option>
+                <ng-option *ngFor="let item of BillFromList" value="{{item.CODE}}">{{item.CODE}}</ng-option>
+              </ng-select>
+              <label class="form-label-ddl">Bill To<span class="text-danger"> *</span></label>
+
+
             </div>
           </div>
           <div class="col-md-3">
-            <form [formGroup]="containerForm">
+            <form [formGroup]="listForm">
               <div class="form-group">
                 <ng-multiselect-dropdown (onSelectAll)="saveContainer($event,1)"
                   (onDeSelectAll)="saveContainer($event,2)" (onSelect)="saveContainer($event)"
@@ -70,13 +113,22 @@
           </div>
           <div class="col-md-3">
             <div class="form-group">
-              <ng-select formControlName="ADDRESS">
+              <input type="date" class="form-control" formControlName="INVOICE_DATE">
+              <label class="form-label">Invoice Date</label>
+              <!-- <ng-select formControlName="ADDRESS">
                 <ng-option disabled value="">--Select--</ng-option>
                 <ng-option *ngFor="let item of AddressList" value="{{item.ADDRESS}}">{{item.ADDRESS}}</ng-option>
               </ng-select>
-              <label class="form-label-ddl">Address<span class="text-danger"> *</span></label>
+              <label class="form-label-ddl">Address<span class="text-danger"> *</span></label> -->
             </div>
           </div>
+          <div class="col-md-3">
+            <div class="form-group">
+              <label class="label-header">Total Container =  {{f.TOTAL_CONTAINER.value}}</label>
+              </div>
+              </div>
+
+
 
         </div>
       </div>
@@ -177,39 +229,48 @@
           </td>
 
           <td>
-            <input class="form-control3" type="text"
+            <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
               [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('TAX').errors}" formControlName="TAX" />
+              <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.TAX}}</span>
           </td>
 
           <td>
-            <input class="form-control3" type="text"
+            <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
               [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('IGST').errors}" formControlName="IGST" />
+            <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.IGST}}</span>
           </td>
           <td>
-            <input class="form-control3" type="text"
+            <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
               [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('SGST').errors}" formControlName="SGST" />
+              <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.SGST}}</span>
           </td>
 
           <td>
-            <input class="form-control3" type="text"
-              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('IGST').errors}" formControlName="IGST" />
+            <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('CGST').errors}" formControlName="CGST" />
+              <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.CGST}}</span>
+
           </td>
 
 
           <td>
-            <input class="form-control3" type="text"
+            <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
               [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('TAX_AMOUNT').errors}"
               formControlName="TAX_AMOUNT" />
+              <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.TAX_AMOUNT}}</span>
+
           </td>
 
           <td>
-            <input class="form-control3" type="text"
+            <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
               [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('TOTAL_AMOUNT').errors}"
               formControlName="TOTAL_AMOUNT" />
+              <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.TAX_AMOUNT}}</span>
+
 
           </td>
           <td>
-            <i class="fa fa-trash ms-2 pointer text-danger" (click)="Delete()"></i>
+            <i class="fa fa-trash ms-2 pointer text-danger" (click)="deleteBranch(i)"></i>
           </td>
 
         </tr>
