--- a/src/app/home/operation/new-invoice2/new-invoice2.component.html
+++ b/src/app/home/operation/new-invoice2/new-invoice2.component.html
@@ -38,7 +38,7 @@
         <tr>
           <th>Sr No</th>
           <th>Invoice No</th>
-          <th>Invoice Type</th>
+          <th>Type</th>
           <th>Bill To</th>
           <th>BL No</th>
           <th>Shipper Name</th>
