--- a/src/app/home/operation/invoice-list2/invoice-list2.component.html
+++ b/src/app/home/operation/invoice-list2/invoice-list2.component.html
@@ -8,12 +8,6 @@
         <div class="row">
           <div class="col-md-3">
             <div class="form-group">
-              <label class="label-header">Invoice Type</label>
-              <label class="label-subheader">{{f.INVOICE_TYPE.value}}</label>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="form-group">
               <label class="label-header">Bill From</label>
               <label class="label-subheader">{{f.BILL_FROM.value}}</label>
             </div>
@@ -31,50 +25,18 @@
               <label class="label-subheader">Prepaid</label>
             </div>
           </div>
+          <div class="col-md-3">
+            <div class="form-group">
+              <label class="label-header">Invoice Type</label>
+              <label class="label-subheader">{{f.INVOICE_TYPE.value}}</label>
+            </div>
+          </div>
         </div>
         <div class="row mt-4">
           <div class="col-md-3">
             <div class="form-group">
-              <nav id="navbar" class="navbar pointer">
-                <ul>
-                  <li class="dropdown"><a class="form-btn-primary  p-2">Please Select Address<i
-                        class="bi bi-chevron-down"></i></a>
-                    <ul>
-                      <table class="table table-bordered">
-                        <thead>
-                          <tr>
-                            <th>Select</th>
-                            <th>No</th>
-                            <th>Customer Name</th>
-                            <th>Branch Name</th>
-                            <th>Address</th>
-                            <th>Country</th>
-                            <th>Is SEZ</th>
-                            <th>Is Tax Applicable</th>
-                            <th>Tax No</th>
-                            <th>Tax Type</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr (click)="getAddress(item.ADDRESS,item.BRANCH_ID)"
-                            *ngFor="let item of AddressList let i = index">
-                            <td><input type="checkbox"></td>
-                            <td>{{i + 1}}</td>
-                            <td>{{item.CUST_NAME}}</td>
-                            <td>{{item.BRANCH_NAME}}</td>
-                            <td>{{item.ADDRESS}}</td>
-                            <td>{{item.COUNTRY}}</td>
-                            <td>{{item.IS_SEZ}}</td>
-                            <td>{{item.IS_TAX_APPLICABLE}}</td>
-                            <td>{{item.TAX_NO}}</td>
-                            <td>{{item.TAX_TYPE}}</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </ul>
-                  </li>
-                </ul>
-              </nav>
+              <input formControlName="SHIPPER_REF" class="form-control" />
+              <label class="form-label">Shipper Ref No</label>
             </div>
           </div>
           <div class="col-md-3">
@@ -104,9 +66,56 @@
               <label class="form-label">Invoice Date</label>
             </div>
           </div>
+        </div>
+        <div class="row mt-4">
           <div class="col-md-3">
             <div class="form-group">
-              <label class="label-header">Total Container = {{f.TOTAL_CONTAINER.value}}</label>
+              <nav id="navbar" class="navbar pointer">
+                <ul>
+                  <li class="dropdown"><a class="form-btn-primary  p-2">Please Select Address<i
+                        class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <div class="table-responsive mx-2 my-2">
+                        <table class="table table-bordered" style="font-size: 10px;">
+                          <thead>
+                            <tr>
+                              <th width="1%">#</th>
+                              <th width="10%">No</th>
+                              <th width="20%">Customer</th>
+                              <th width="10%">Branch</th>
+                              <th width="28%">Address</th>
+                              <th width="5%">Country</th>
+                              <th width="5%">SEZ</th>
+                              <th width="5%">Tax</th>
+                              <th width="7%">Tax No</th>
+                              <th width="9%">Type</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr (click)="getAddress(item.ADDRESS,item.BRANCH_ID)"
+                              *ngFor="let item of AddressList let i = index">
+                              <td width="1%"><input type="checkbox"></td>
+                              <td width="10%">{{i + 1}}</td>
+                              <td width="20%">{{item.CUST_NAME}}</td>
+                              <td width="10%">{{item.BRANCH_NAME}}</td>
+                              <td width="28%">{{item.ADDRESS}}</td>
+                              <td width="5%">{{item.COUNTRY}}</td>
+                              <td width="5%"><i
+                                  [class]="item.IS_SEZ ? 'fs-5 bx bxs-check-circle text-success' : 'fs-5 bx bxs-x-circle text-danger'"></i>
+                              </td>
+                              <td width="5%"><i
+                                  [class]="item.IS_TAX_APPLICABLE ? 'fs-5 bx bxs-check-circle text-success' : 'fs-5 bx bxs-x-circle text-danger'"></i>
+                              </td>
+                              <td width="7%">{{item.TAX_NO}}</td>
+                              <td width="9%">{{item.TAX_TYPE}}</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </ul>
+                  </li>
+                </ul>
+              </nav>
             </div>
           </div>
         </div>
