invoice new changes

--- a/src/app/home/operation/invoice-list2/invoice-list2.component.html
+++ b/src/app/home/operation/invoice-list2/invoice-list2.component.html
@@ -70,6 +70,12 @@
         <div class="row mt-4">
           <div class="col-md-3">
             <div class="form-group">
+              <textarea type="date" class="form-control addressbox" formControlName="REMARKS"></textarea>
+              <label class="form-label">Remarks</label>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="form-group">
               <nav id="navbar" class="navbar pointer">
                 <ul>
                   <li class="dropdown"><a class="form-btn-primary  p-2">Please Select Address<i
