--- a/src/app/home/operation/new-invoice2/new-invoice2.component.html
+++ b/src/app/home/operation/new-invoice2/new-invoice2.component.html
@@ -61,7 +61,7 @@
           </td>
           <td width="9%">
             <i class="fa fa-eye me-2 pointer fs-6" tooltip="View" placement="top"></i>
-            <i class="fa fa-file-pdf-o pointer text-success fs-6" (click)="getInvoiceDetails(item.INVOICE_NO)"
+            <i class="fa fa-file-pdf-o pointer text-success fs-6" (click)="getInvoiceDetails(item.INVOICE_ID)"
               tooltip="Download PDF" placement="top"></i>
           </td>
         </tr>
