--- a/src/app/home/operation/new-invoice2/new-invoice2.component.html
+++ b/src/app/home/operation/new-invoice2/new-invoice2.component.html
@@ -37,20 +37,20 @@
       <thead>
         <tr>
           <th width="1%">No</th>
-          <th width="10%">Invoice No</th>
+          <th width="5%">Invoice No</th>
           <th width="10%">Type</th>
           <th width="10%">Bill To</th>
           <th width="10%">BL No</th>
           <th width="15%">Shipper Name</th>
           <th width="20%">Bill From</th>
           <th width="15%">Status</th>
-          <th width="9%">Action</th>
+          <th width="14%">Action</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let item of invoiceList let i = index">
           <td width="1%">{{i +1}}</td>
-          <td width="10%">{{item.INVOICE_NO}}</td>
+          <td width="5%">{{item.INVOICE_NO}}</td>
           <td width="10%">{{item.INVOICE_TYPE}}</td>
           <td width="10%">{{item.BILL_TO}}</td>
           <td width="10%">{{item.BL_NO}}</td>
@@ -59,12 +59,14 @@
           <td width="15%" class="status"><span
               [class]="item.STATUS == 'PROFORMA' ? 'waiting' : 'active'">{{item.STATUS}}</span>
           </td>
-          <td width="9%">
+          <td width="14%">
             <i class="fa fa-eye me-2 pointer fs-6" tooltip="View" placement="top"></i>
-            <i class="fa fa-file-pdf-o pointer text-success fs-6" (click)="getInvoiceDetails(item.INVOICE_ID)"
+            <i class="fa fa-file-pdf-o pointer text-danger fs-6" (click)="getInvoiceDetails(item.INVOICE_ID)"
               tooltip="Download PDF" placement="top"></i>
             <i (click)="finalizeInvoice(item.INVOICE_ID)" *ngIf="item.STATUS == 'PROFORMA'" tooltip="Finalize"
               placement="top" class="fs-6 ms-2 bx bxs-check-circle text-success pointer"></i>
+            <i (click)="editInvoice(item.INVOICE_TYPE,item.BL_NO,item.INVOICE_ID)" *ngIf="item.STATUS == 'PROFORMA'"
+              tooltip="Edit" placement="top" class="fs-6 ms-2 bx bx-pencil text-info pointer"></i>
           </td>
         </tr>
       </tbody>
